<resources>
    <string name="app_name">PSTUian</string>
    <string name="db_name">pstuian_db</string>
    <string name="search_suggestion_provider_authority" translatable="false">
        com.workfort.pstuian.BaseSuggestionProvider
    </string>
    <string name="default_notification_channel_id">default-notification-channel</string>
    <string name="default_notification_channel_name">Default</string>
    <string name="title_activity_students">Students</string>
    <string name="label_settings_screen">Settings</string>
    <string name="label_donors_screen">Donors</string>
    <string name="title_activity_student_profile">Profile</string>
    <string name="title_activity_teacher_profile">Profile</string>
    <string name="title_activity_employee_profile">Profile</string>
    <string name="title_activity_edit_profile">Edit</string>
    <string name="label_donate_screen">Donate</string>
    <string name="title_activity_support">Support</string>
    <string name="label_notification_screen">Notification</string>
    <string name="title_force_refresh_dialog">Refresh required</string>
    <string name="title_force_update_dialog">Update required</string>
    <string name="title_flexible_update_dialog">Update Available!</string>
    <string name="title_install_update_dialog">Ready To Install</string>
    <string name="label_location_picker_screen">Location Picker</string>
    <string name="label_download_cv_screen">Download CV</string>
    <string name="label_upload_cv_screen">Upload CV</string>
    <string name="label_upload_image_screen">Upload Image</string>
    <string name="hint_search">Search</string>
    <string name="hint_search_teacher">Search teacher</string>
    <string name="hint_search_student">Search student</string>
    <string name="hint_search_batch">Search batch</string>
    <string name="hint_search_employee">Search employee</string>
    <string name="hint_search_course_schedule">Search course schedule</string>
    <string name="hint_name">Name</string>
    <string name="hint_message">Message</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_reference">Reference(TrxID/TxnId)</string>
    <string name="hint_save_donation">After sending donation</string>
    <string name="hint_search_donors">Search donors</string>
    <string name="hint_remembered_password">Remembered password?</string>
    <string name="hint_password_recovery">*Password reset instructions will be sent to your email address</string>
    <string name="hint_sign_in">Already have an account?</string>
    <string name="hint_sign_up">Need a new account?</string>
    <string name="hint_id">Id</string>
    <string name="hint_reg">Reg</string>
    <string name="hint_session">Session</string>
    <string name="hint_blood_group">Blood Group</string>
    <string name="hint_faculty">Faculty</string>
    <string name="hint_batch">Batch</string>
    <string name="hint_address">Address</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_linked_in">LinkedIn</string>
    <string name="hint_facebook">Facebook</string>
    <string name="hint_cv">CV</string>
    <string name="hint_upload_new_cv">Upload New CV</string>
    <string name="hint_bio">Bio</string>
    <string name="hint_add_bio">No bio added yet</string>
    <string name="hint_bio_max_length">Maximum length is 150 character</string>
    <string name="hint_designation">Designation</string>
    <string name="hint_department">Department</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="helper_text_password">Minimum length is 6</string>
    <string name="helper_txt_max_length_donation_message">Maximum 250 characters</string>
    <string name="helper_text_help_message_max_length">Maximum 500 characters</string>
    <string name="example_session">Example: 2013–14</string>
    <string name="label_faculties">Faculties</string>
    <string name="label_course_schedule">Course Schedule</string>
    <string name="label_grading_system">Grading System</string>
    <string name="label_marks_distribution">Marks Distribution</string>
    <string name="label_view">View</string>
    <string name="label_whats_it">What\'s it</string>
    <string name="label_search">Search</string>
    <string name="label_fb_link">Facebook</string>
    <string name="label_linked_in">LinkedIn</string>
    <string name="label_teacher">Teacher</string>
    <string name="label_batch">Batch</string>
    <string name="label_employee">Employee</string>
    <string name="label_other">Other</string>
    <string name="label_credit_hour">Credit hour</string>
    <string name="label_information_corner">Information Corner</string>
    <string name="label_university_website">Website of PSTU</string>
    <string name="label_admission_seat_plan">Admission Seat Plan</string>
    <string name="label_admission_support">Admission Support</string>
    <string name="txt_donate">Donate</string>
    <string name="label_rate_our">Rate app</string>
    <string name="label_clear_data">Clear data</string>
    <string name="label_donation_list">Our Donors</string>
    <string name="label_are_you_sure">Are you sure?</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_save_donation">Save donation</string>
    <string name="label_be_the_first_donor">Be the first donor</string>
    <string name="label_call_us">Call us</string>
    <string name="label_feedback">Send Feedback</string>
    <string name="label_options">Options</string>
    <string name="label_sign_in_activity">Sign In</string>
    <string name="label_sign_up_activity">Sign Up</string>
    <string name="label_forgot_password_screen">Forgot Password</string>
    <string name="label_others">Others</string>
    <string name="label_contact_us">Contact Us</string>
    <string name="txt_got_it">Got it</string>
    <string name="txt_need_help">Need Help?</string>
    <string name="txt_start_typing">Start Typing</string>
    <string name="txt_session">Session</string>
    <string name="txt_total_students">Total Students</string>
    <string name="txt_designation">Designation</string>
    <string name="txt_department">Department</string>
    <string name="txt_credit">Credit</string>
    <string name="txt_id">ID</string>
    <string name="txt_registration_number">Reg</string>
    <string name="txt_blood_group">Blood Group</string>
    <string name="txt_faculty">Faculty</string>
    <string name="txt_batch">Batch</string>
    <string name="txt_address">Address</string>
    <string name="txt_phone">Phone</string>
    <string name="txt_email">Email</string>
    <string name="txt_linked_in">LinkedIn</string>
    <string name="txt_facebook">Facebook</string>
    <string name="txt_connect">Connect</string>
    <string name="txt_academic">Academic</string>
    <string name="txt_cv">CV</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_forgot_password">Forgot password?</string>
    <string name="txt_or">Or</string>
    <string name="txt_send">Send</string>
    <string name="txt_send_verification_email">Send verification email</string>
    <string name="txt_send_reset_link">Send reset link</string>
    <string name="txt_sign_up_conditions">
        By signing up you will automatically agree to the
    </string>
    <string name="txt_and">and</string>
    <string name="txt_privacy_policy">Privacy Policy</string>
    <string name="txt_terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_select_batch">Select Batch</string>
    <string name="txt_select_faculty">Select Faculty</string>
    <string name="txt_dismiss">Dismiss</string>
    <string name="txt_refresh">Refresh</string>
    <string name="txt_update">Update</string>
    <string name="txt_install">Install</string>
    <string name="txt_unknown">Unknown</string>
    <string name="txt_downloading">Downloading…</string>
    <string name="txt_upload">Upload</string>
    <string name="txt_change">Change</string>
    <string name="txt_sign_out">Sign Out</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_title_call">Phone call</string>
    <string name="txt_msg_call">Are you surely want to make a phone call?</string>
    <string name="txt_error_call">Ops, no phone number found</string>
    <string name="txt_error_email">Ops, no email address found!</string>
    <string name="txt_title_email">Email</string>
    <string name="txt_msg_email">Are you surely want to send an email?</string>
    <string name="txt_call">Call</string>
    <string name="msg_download_cv">Are you surely want to download the cv?</string>
    <string name="txt_error_download_cv">Ops, no link found to download the cv!</string>
    <string name="txt_title_download_cv">Download CV</string>
    <string name="txt_download">Download</string>
    <string name="txt_change_name">Change Name</string>
    <string name="txt_edit_academic">Edit Academic</string>
    <string name="txt_edit_connect">Edit Connect</string>
    <string name="txt_saving_changes">Saving changes…</string>
    <string name="txt_save_changes">Save Changes</string>
    <string name="txt_retry">Retry</string>
    <string name="txt_please_wait">Please Wait…</string>
    <string name="txt_reload">Reload</string>
    <string name="txt_change_bio">Change Bio</string>
    <string name="txt_name">Name</string>
    <string name="txt_open_profile">Open Profile</string>
    <string name="txt_save_donation">Save Donation</string>
    <string name="txt_home">Home</string>
    <string name="txt_student">Student</string>
    <string name="txt_teacher">Teacher</string>
    <string name="txt_i_am">I am</string>
    <string name="txt_user_type">User Type</string>
    <string name="txt_select">Select</string>
    <string name="txt_option">Option</string>
    <string name="txt_password">Password</string>
    <string name="txt_change_password">Change Password</string>
    <string name="txt_settings">Settings</string>
    <string name="about_it">
        <b>PSTUian</b> is a small tribute to our beloved university. It\'s an step to connect
        honorable teachers, students, employees and everything else in a single place.
    </string>
    <string name="data_load_policy">
        All data are sync from our remote server. So, to get the data of any
        options(like faculty, students etc) you will need a data connection(internet/wifi). If you
        can\'t find any particular data please try to clear all data and restart the app.
    </string>
    <string name="donation_request_message">
        <u>PLEASE DONATE</u>\nOur dev team works without hoping for any benefit. But, we still
        need some maintenance(e.g. domain, hosting, PlayStore Account, testing etc) cost. It might
        also help us to expand our dimension and inspire us to do more. A cup of coffee is well
        appreciated. Because, programmers transform the coffee into code(:p). Your small donation
        is a great sign that you appreciate our work. Show us your noble heart. Thanks a lot in
        advance.\n আমাদের Dev Team সম্পূর্ণ অলাভজনক ভাবে ভার্সিটির বিভিন্ন অ্যাপের জন্য কাজ করে আসছে। তবুও বিভন্ন সময়
        maintenance(যেমন ডোমেইন, হোস্টিং, PlayStore অ্যাকাউন্ট, টেস্টিং ইত্যাদি) এর জন্য খরচের প্রয়োজন হয়। আপনার মহৎ হৃদয়
        আর সামন্য পরিমাণ ডোনেশন আমাদের অনেক দূর নিয়ে যাবে। আমাদের কাজের স্বীকৃতিই আরো নতুন কিছু করার অনুপ্রেরনা। আপনার
        ডোনেশনের জন্য আন্তরিক ভাবে ধন্যবাদ জানাই।
    </string>
    <string name="dev_team">
        DEVELOPED BY\n
        WORK FORT\n
        Where Innovation Meets Passion
    </string>
    <string name="msg_upload_new_cv">Are you sure to upload the selected file? It will be your
        new cv. Don\'t worry, you can always upload a new one whenever you wish.
    </string>
</resources>