<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools"
        android:paddingBottom="@dimen/space_10dp"
        tools:showIn="@layout/activity_settings">

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_about_it"
            style="@style/MaterialCardView.Settings"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

        <TextView
                style="@style/TvInformation"
                android:textColor="@android:color/black"
                android:text="@string/about_it"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_donation_request"
            style="@style/MaterialCardView.Settings"
            app:strokeColor="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/card_about_it"
            tools:ignore="MissingConstraints">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    style="@style/TvInformation"
                    android:background="@drawable/shape_rectangle"
                    android:layout_marginStart="@dimen/space_10dp"
                    android:layout_marginTop="@dimen/space_10dp"
                    android:layout_marginEnd="@dimen/space_10dp"
                    android:text="@string/donation_request_message"
                    android:textStyle="normal"
                    android:textColor="@android:color/white"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_donate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/txt_donate"
                    app:icon="@drawable/ic_donate"
                    app:iconSize="@dimen/dp24"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_data_policy"
            style="@style/MaterialCardView.Settings"
            app:layout_constraintTop_toBottomOf="@+id/card_donation_request"
            tools:ignore="MissingConstraints">

        <TextView
                style="@style/TvInformation"
                android:textColor="@android:color/black"
                android:text="@string/data_load_policy"
                android:textStyle="normal" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_developer"
            style="@style/MaterialCardView.Settings"
            app:layout_constraintTop_toBottomOf="@+id/card_data_policy"
            tools:ignore="MissingConstraints">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/space_10dp"
                android:orientation="vertical">

            <TextView
                    style="@style/TvInformation"
                    android:textColor="@android:color/black"
                    android:text="@string/dev_team"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_contact_us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/label_contact_us"
                    app:icon="@drawable/ic_email"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>