<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="?attr/backgroundColor">

    <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_space"
            android:layout_marginTop="@dimen/default_space"
            style="@style/TextView.TitleSmall2"
            android:text="@string/txt_user_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/tb_user_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleSelection="true"
            app:checkedButton="@id/btn_student"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginStart="@dimen/default_space"
            android:layout_marginTop="@dimen/default_space">

        <Button
                android:id="@+id/btn_student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_student"
                style="?attr/materialButtonOutlinedStyle" />
        <Button
                android:id="@+id/btn_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_teacher"
                style="?attr/materialButtonOutlinedStyle" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/default_space"
            app:layout_constraintTop_toBottomOf="@id/tb_user_type"
            android:background="?attr/customDividerColor"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintEnd_toStartOf="@id/btn_select"
            android:text="@string/txt_dismiss"
            android:textColor="?attr/customPrimaryTextColor"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:layout_constraintStart_toEndOf="@id/btn_dismiss"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/txt_select"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"/>
</androidx.constraintlayout.widget.ConstraintLayout>