<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/space_10dp">

            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_about_it"
                    style="@style/MaterialCardView"
                    app:layout_constraintTop_toTopOf="parent">

                <TextView
                        style="@style/TextViewInformation"
                        android:text="@string/about_it"/>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_donation_request"
                    style="@style/MaterialCardView"
                    app:strokeColor="@color/colorAccent"
                    app:layout_constraintTop_toBottomOf="@+id/card_about_it">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <TextView
                            style="@style/TextViewInformation"
                            android:background="@drawable/shape_rectangle"
                            android:layout_marginStart="@dimen/space_10dp"
                            android:layout_marginTop="@dimen/space_10dp"
                            android:layout_marginEnd="@dimen/space_10dp"
                            android:text="@string/donation_request_message"
                            android:textStyle="normal"
                            android:textColor="@android:color/white"/>

                    <TextView
                            android:id="@+id/btn_donate"
                            style="@style/TextButton.Medium"
                            android:layout_gravity="center"
                            android:text="@string/label_send_donate"
                            android:textAllCaps="true" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_data_policy"
                    style="@style/MaterialCardView"
                    app:layout_constraintTop_toBottomOf="@+id/card_donation_request">

                <TextView
                        style="@style/TextViewInformation"
                        android:text="@string/data_load_policy"
                        android:textStyle="normal" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_developer"
                    style="@style/MaterialCardView"
                    app:layout_constraintTop_toBottomOf="@+id/card_data_policy">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/space_10dp"
                    android:orientation="vertical">

                    <TextView
                            style="@style/TextViewInformation"
                            android:text="@string/dev_team"/>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center">

                        <TextView
                                android:id="@+id/btn_call_dev"
                                style="@style/TextButton.Small"
                                android:text="@string/label_call_us" />

                        <TextView
                                android:id="@+id/btn_feedback"
                                style="@style/TextButton.Small"
                                android:text="@string/label_feedback" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>